--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,16 @@
-fastapi==0.109.2
-uvicorn==0.27.1
-python-dotenv==1.0.1
-sqlalchemy==2.0.27
-pydantic==2.6.1
-pydantic-settings==2.1.0
-pytest==8.0.0
-httpx==0.26.0
-python-jose==3.3.0
-passlib==1.7.4
-bcrypt==4.1.2
-python-multipart==0.0.9
-alembic==1.13.1 
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.14
+aiohttp-retry==2.9.1
+aiosignal==1.3.2
+attrs==25.3.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+frozenlist==1.5.0
+idna==3.10
+multidict==6.2.0
+propcache==0.3.0
+PyJWT==2.10.1
+requests==2.32.3
+twilio==9.5.0
+urllib3==2.3.0
+yarl==1.18.3
