--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,3 +14,10 @@ requests==2.32.3
 twilio==9.5.0
 urllib3==2.3.0
 yarl==1.18.3
+fastapi==0.110.0
+uvicorn==0.27.0
+pydantic==2.6.1
+python-dotenv==1.0.0
+httpx==0.26.0
+websockets==12.0
+python-multipart==0.0.9
