--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,6 @@ BACKEND_PORT=8000
 # API Keys (comma-separated for Polygon)
 POLYGON_API_KEYS=your_polygon_api_key_1,your_polygon_api_key_2,your_polygon_api_key_3
 NEWS_API_KEY=your_news_api_key 
+
+# AssemblyAI API Key
+ASSEMBLYAI_API_KEY=your_assemblyai_api_key
