--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,3 +8,4 @@ NEWS_API_KEY=your_news_api_key
 
 # AssemblyAI API Key
 ASSEMBLYAI_API_KEY=your_assemblyai_api_key
+OPENROUTER_API_KEY=your_openrouter_api_key
